# adblock-rust-ffi

./: .gitignore  .travis.yml  BUILD.gn  Cargo.toml  Makefile  binding.gyp  cbindgen.toml  config.gni  package-lock.json  package.json
examples/cpp/: main.cc  main.cpp
src/: ad_block_client_wrap.cc  ad_block_client_wrap.h  addon.cc  lib.h  lib.rs  wrapper.cc  wrapper.cpp  wrapper.h  wrapper.hpp
